fixed navbar title, added booster in brief link, arrival time and depart time for incident jumpers

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -21,10 +21,13 @@
   }
   .logout-button {
     position: absolute;
-    right: 15px;
-    font-size: 28px;
+    right: 110px;
     cursor: pointer;
     padding: 15px;
+  }
+  .version {
+    position: absolute;
+    right: 10px;
   }
   .logo {
     position: absolute;
@@ -34,7 +37,7 @@
       height: 32px;
     }
     &.left {
-      left: 80px;
+      left: 70px;
     }
     &.right {
       right: 60px;
@@ -42,7 +45,7 @@
   }
   .title {
     position: absolute;
-    left: 180px;
+    left: 140px;
   }
   .background-image {
     position: absolute;
