--- a/src/app/routes/dashboard/dashboard.component.scss
+++ b/src/app/routes/dashboard/dashboard.component.scss
@@ -5,7 +5,7 @@
   background-position: top right;
 }
 .dashboard-content {
-  margin-top: 50px;
+  margin-top: 20px;
   height: calc(100% - 165px);
   overflow: overlay;
   padding: 0 75px;
@@ -18,6 +18,13 @@
   position: relative;
   left: 50%;
   transform: translateX(-50%);
+  .booster-link {
+    width: 100%;
+    margin-left: 12px;
+    cursor: pointer;
+    text-decoration: underline;
+    color: #3d3d3d;
+  }
   .card {
     box-shadow: grey 1px 2px 2px 1px;
     cursor: pointer;
